[project]
name = "comfyui_saveimage_imgbb"
description = "This custom node allow you to upload result images to imgbb."
version = "1.21.5" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

#versions??

[project.urls]
Repository = "https://github.com/revirevy/Comfyui_saveimage_imgbb"

[tool.comfy]
PublisherId = "revirevy2" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "Comfyui_saveimage_imgbb" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)
